--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+Zdenek Horsky, "Prazsky Orloj" 
+["The Astronomical Clock of Prague", in Czech], 
+Panorama, Prague, 1988, pp. 76-78.
 
  Implement Your Own itoa()
 
