--- a/README
+++ b/README
@@ -9,6 +9,8 @@ There is a single bell, which to indicate 5 o'clock, say, strikes thrice then tw
 
  Implement Your Own itoa()
 
+After a(20), there is only 109305220 - 297122396/e = ~1.06317354345346734...*10^-8 to work with.
+
 The itoa function converts an integer into a null-terminated string. It can convert negative numbers too. It is a standard library function that is defined inside stdlib.h header file.
 
 Syntax of itoa in C
